--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -45,7 +45,7 @@
                             <p class="text-center mb-4">See what is going on with your business</p>
                             <div class="ry-field-with-icon name mb-3 position-relative">
 
-                                <label>Enter Email</label>
+                                <label>Email</label>
                                 <img src="assets/images/login/Vector.svg" alt="emailicon">
 
                                 <div class="form-group">
