--- a/index.html
+++ b/index.html
@@ -28,7 +28,35 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xl-6"><img class="bg-img-cover bg-center" src="assets/images/login/auth.gif" alt="maingif"></div>
+                <div class="col-xl-6 p-5 position-relative">
+
+                    <img class="bg-img-cover bg-center" src="assets/images/login/sdsd.gif" alt="maingif">
+                    <div class="position-absolute" style="bottom: 55px; left: 23%;">
+                        <div id="myCarousel " class="carousel slide " data-bs-ride="carousel">
+
+                            <div class="carousel-inner">
+                                <div class="carousel-item active" data-interval="700">
+                                    <h6 class=" fw-bold">
+                                        Empowering Prosumers with "Real Power"
+
+                                    </h6>
+                                </div>
+                                <div class="carousel-item" data-interval="700">
+                                    <h6 class="  fw-bold">
+                                        Let's Decarbonise the Future, Together!
+
+                                    </h6>
+                                </div>
+                                <div class="carousel-item " data-interval="700">
+                                    <h6 class="  fw-bold">
+                                        Join the Revolution
+
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-xl-6 p-0">
 
                     <div class="login-card d-grid theme-form ">
@@ -48,8 +76,8 @@
                                 <label>Email</label>
                                 <img src="assets/images/login/Vector.svg" alt="emailicon">
 
-                                <div class="form-group">
-                                    <input class="border-none" type="text" placeholder="Enter Email">
+                                <div class="form-group-">
+                                    <input type="text" placeholder="Enter Email">
                                 </div>
                             </div>
 
@@ -83,11 +111,34 @@
             </div>
         </div>
     </section>
+
     <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/bootstrap/popper.min.js"></script>
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
 
     <script src="assets/js/script.js"></script>
+    <script>
+        var t;
+
+        var start = $('#myCarousel').find('.active').attr('data-interval');
+        t = setTimeout("$('#myCarousel').carousel({interval: 2000});", start - 2000);
+
+        $('#myCarousel').on('slid.bs.carousel', function() {
+            clearTimeout(t);
+            var duration = $(this).find('.active').attr('data-interval');
+
+            $('#myCarousel').carousel('pause');
+            t = setTimeout("$('#myCarousel').carousel();", duration - 2000);
+        })
+
+        $('.carousel-control.right').on('click', function() {
+            clearTimeout(t);
+        });
+
+        $('.carousel-control.left').on('click', function() {
+            clearTimeout(t);
+        });
+    </script>
 
 </body>
 
